added refresh button

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
+  <!-- 
+    Microsoft ResX Schema 
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -117,30 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
-        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAArgMAAAJNU0Z0AUkBTAMBAQAB
-        EAEAARABAAEUAQABFAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAVADAAEUAwABAQEAASAGAAEZJgAD
-        BgEHAzYBWgNEAawDJwHhAwYB+wMIAfoDKAHgA0QBrAM2AVoDBQEG/wAVAAMyAVADJwHhAwAB/wMXAe4D
-        QQG0A0UBlQNFAZUDQQG0AxcB7gMAAf8DKAHgAzIBT/8AAQADGwElAwkBCwQBA0QBiQMAAf8DLAHcAzUB
-        WAMFAQYQAAMFAQYDNQFYAywB3AMAAf8DRAGJBAH4AAMRAfQDRAGJA0MBhAMAAf8DRAGnAwgBCiAAAwkB
-        CwNEAagDAAH/A0MBhPgAAx4B6QMqAd0DAgH+A0ABugM/AXIDCwEOJAAEAgNEAawDAgH+Ay0BRfQAAzMB
-        0gMAAf8DAAH/AxkB7QMCAf4DJwE6KAADCwEOAyQB5AM2Acz0AAM+AbsDAAH/AwAB/wMgAecDLgFHMAAD
-        KgE/AzgBX/QAA0QBowMAAf8DQgGyAxABFf8AMQADHwEsAzYBWQQB/wD/AP8A+wAEAQM2AVkDHwEs/wAx
-        AAMQARUDQgGyAwAB/wNEAaP0AAM4AV8DKQE+MAADLgFHAyEB5gMAAf8DAAH/Az4Bu/QAAzYBzAMkAeQD
-        CwEOKAADJwE6AwIB/gMZAe0DAAH/AwAB/wMzAdL0AAMtAUUDAgH+A0QBrAQCJAADCwEOAz8BcgNAAboD
-        AgH+AyoB3QMeAen4AANDAYQDAAH/A0QBqAMJAQsgAAMIAQoDRAGnAwAB/wNDAYQDRAGJAxEB9PgABAED
-        RAGJAwAB/wMsAdwDNQFYAwUBBhAAAwQBBQM1AVgDLAHbAwAB/wNEAYkEAQMJAQsDGwEl/wABAAMyAU8D
-        KAHgAwAB/wMXAe4DQQG0A0UBlQNFAZUDQQG0AxcB7gMAAf8DJwHhAzIBUP8AFQADBQEGAzYBWQNEAasD
-        JwHhAwYB+wMGAfsDJwHhA0QBrAM3AVsDBgEH/wAFAAFCAU0BPgcAAT4DAAEoAwABUAMAARQDAAEBAQAB
-        AQUAAfAXAAP/AQAB+AEBAfAJAAHwAQAB8AoAAfABMAkAAQMB/AEwCQABAwH+ARAJAAEDAf8BEAkAAQcB
-        /wGQCQABDwH/AfAJAAEfAf8B8AkAAv8B8AkAAv8B8AkAAv8BgAkAAv8KAAGfAf4KAAGPAfwKAAGHAfwK
-        AAHDAfwKAAHAAfAKAAHwAQAB8AkAAfgBAQHwCQAL
-</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="refresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\refresh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
