--- a/APIHttpTool.resx
+++ b/APIHttpTool.resx
@@ -125,22 +125,25 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAArgMAAAJNU0Z0AUkBTAMBAQAB
-        KAEAASgBAAEUAQABFAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAVADAAEUAwABAQEAASAGAAEZJgAD
-        BgEHAzcBWgNUAawDRwHhAw8B+wMUAfoDRwHgA1QBrAM3AVoDBQEG/wAVAAMzAVADRwHhAwAB/wMxAe4D
-        VQG0A04BlQNOAZUDVQG0AzEB7gMAAf8DRwHgAzIBT/8AAQADGwElAwkBCwQBA0oBiQMAAf8DSwHcAzYB
-        WAMFAQYQAAMFAQYDNgFYA0sB3AMAAf8DSgGJBAH4AAMjAfQDSgGJA0gBhAMAAf8DUgGnAwgBCiAAAwkB
-        CwNSAagDAAH/A0gBhPgAAzoB6QNJAd0DBQH+A1UBugNBAXIDCwEOJAAEAgNUAawDBQH+Ay0BRfQAA1EB
-        0gMAAf8DAAH/AzQB7QMFAf4DJwE6KAADCwEOAz8B5ANTAcz0AANUAbsDAAH/AwAB/wM/AecDLgFHMAAD
-        KgE/AzkBX/QAA1EBowMAAf8DVAGyAxABFf8AMQADHwEsAzYBWQQB/wD/AP8A+wAEAQM2AVkDHwEs/wAx
-        AAMQARUDVAGyAwAB/wNRAaP0AAM5AV8DKQE+MAADLgFHA0EB5gMAAf8DAAH/A1QBu/QAA1MBzAM/AeQD
-        CwEOKAADJwE6AwUB/gM0Ae0DAAH/AwAB/wNRAdL0AAMtAUUDBQH+A1QBrAQCJAADCwEOA0EBcgNVAboD
-        BQH+A0kB3QM6Aen4AANIAYQDAAH/A1IBqAMJAQsgAAMIAQoDUgGnAwAB/wNIAYQDSgGJAyMB9PgABAED
-        SgGJAwAB/wNLAdwDNgFYAwUBBhAAAwQBBQM2AVgDTAHbAwAB/wNKAYkEAQMJAQsDGwEl/wABAAMyAU8D
-        RwHgAwAB/wMxAe4DVQG0A04BlQNOAZUDVQG0AzEB7gMAAf8DRwHhAzMBUP8AFQADBQEGAzYBWQNUAasD
-        RwHhAw8B+wMPAfsDRwHhA1QBrAM4AVsDBgEH/wAFAAFCAU0BPgcAAT4DAAEoAwABUAMAARQDAAEBAQAB
+        MAEAATABAAEUAQABFAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAVADAAEUAwABAQEAASAGAAEZJgAD
+        BgEHAzcBWgNVAawDTgHhAxIB+wMYAfoDTAHgA1UBrAM3AVoDBQEG/wAVAAMzAVADTgHhAwAB/wM4Ae4D
+        VQG0A04BlQNOAZUDVQG0AzgB7gMAAf8DTAHgAzIBT/8AAQADGwElAwkBCwQBA0oBiQMAAf8DUQHcAzYB
+        WAMFAQYQAAMFAQYDNgFYA1EB3AMAAf8DSgGJBAH4AAMoAfQDSgGJA0gBhAMAAf8DUwGnAwgBCiAAAwkB
+        CwNSAagDAAH/A0gBhPgAA0EB6QNOAd0DBgH+A1YBugNBAXIDCwEOJAAEAgNVAawDBgH+Ay0BRfQAA1YB
+        0gMAAf8DAAH/AzoB7QMGAf4DJwE6KAADCwEOA0UB5ANWAcz0AANXAbsDAAH/AwAB/wNFAecDLgFHMAAD
+        KgE/AzkBX/QAA1IBowMAAf8DVgGyAxABFf8AMQADHwEsAzYBWQQB/wD/AP8A+wAEAQM2AVkDHwEs/wAx
+        AAMQARUDVgGyAwAB/wNSAaP0AAM5AV8DKQE+MAADLgFHA0gB5gMAAf8DAAH/A1cBu/QAA1YBzANFAeQD
+        CwEOKAADJwE6AwYB/gM6Ae0DAAH/AwAB/wNWAdL0AAMtAUUDBgH+A1UBrAQCJAADCwEOA0EBcgNWAboD
+        BgH+A04B3QNBAen4AANIAYQDAAH/A1IBqAMJAQsgAAMIAQoDUwGnAwAB/wNIAYQDSgGJAygB9PgABAED
+        SgGJAwAB/wNRAdwDNgFYAwUBBhAAAwQBBQM2AVgDUQHbAwAB/wNKAYkEAQMJAQsDGwEl/wABAAMyAU8D
+        TAHgAwAB/wM4Ae4DVQG0A04BlQNOAZUDVQG0AzgB7gMAAf8DTgHhAzMBUP8AFQADBQEGAzYBWQNUAasD
+        TgHhAxIB+wMSAfsDTgHhA1UBrAM4AVsDBgEH/wAFAAFCAU0BPgcAAT4DAAEoAwABUAMAARQDAAEBAQAB
         AQUAAfAXAAP/AQAB+AEBAfAJAAHwAQAB8AoAAfABMAkAAQMB/AEwCQABAwH+ARAJAAEDAf8BEAkAAQcB
         /wGQCQABDwH/AfAJAAEfAf8B8AkAAv8B8AkAAv8B8AkAAv8BgAkAAv8KAAGfAf4KAAGPAfwKAAGHAfwK
         AAHDAfwKAAHAAfAKAAHwAQAB8AkAAfgBAQHwCQAL
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>35</value>
+  </metadata>
 </root>
