--- a/APIHttpTool.resx
+++ b/APIHttpTool.resx
@@ -125,24 +125,27 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAArgMAAAJNU0Z0AUkBTAMBAQAB
-        mAEAAZgBAAEUAQABFAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAVADAAEUAwABAQEAASAGAAEZJgAD
-        BgEHAzcBWgNVAawDYgHhAyEB+wMnAfoDYAHgA1UBrAM3AVoDBQEG/wAVAAMzAVADYgHhAwAB/wNaAe4D
-        VQG0A04BlQNOAZUDVQG0A1oB7gMAAf8DYAHgAzIBT/8AAQADGwElAwkBCwQBA0oBiQMAAf8DXQHcAzYB
-        WAMFAQYQAAMFAQYDNgFYA10B3AMAAf8DSgGJBAH4AANPAfQDSgGJA0gBhAMAAf8DUwGnAwgBCiAAAwkB
-        CwNSAagDAAH/A0gBhPgAA1oB6QNeAd0DEwH+A1gBugNBAXIDCwEOJAAEAgNVAawDEwH+Ay0BRfQAA14B
-        0gMAAf8DAAH/A14B7QMTAf4DJwE6KAADCwEOA1sB5ANdAcz0AANZAbsDAAH/AwAB/wNcAecDLgFHMAAD
+        oAEAAaABAAEUAQABFAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAVADAAEUAwABAQEAASAGAAEZJgAD
+        BgEHAzcBWgNVAawDYgHhAyEB+wMoAfoDYAHgA1UBrAM3AVoDBQEG/wAVAAMzAVADYgHhAwAB/wNbAe4D
+        VQG0A04BlQNOAZUDVQG0A1sB7gMAAf8DYAHgAzIBT/8AAQADGwElAwkBCwQBA0oBiQMAAf8DXQHcAzYB
+        WAMFAQYQAAMFAQYDNgFYA10B3AMAAf8DSgGJBAH4AANRAfQDSgGJA0gBhAMAAf8DUwGnAwgBCiAAAwkB
+        CwNSAagDAAH/A0gBhPgAA1oB6QNeAd0DFAH+A1gBugNBAXIDCwEOJAAEAgNVAawDFAH+Ay0BRfQAA14B
+        0gMAAf8DAAH/A14B7QMUAf4DJwE6KAADCwEOA1sB5ANdAcz0AANZAbsDAAH/AwAB/wNcAecDLgFHMAAD
         KgE/AzkBX/QAA1IBowMAAf8DVgGyAxABFf8AMQADHwEsAzYBWQQB/wD/AP8A+wAEAQM2AVkDHwEs/wAx
         AAMQARUDVgGyAwAB/wNSAaP0AAM5AV8DKQE+MAADLgFHA2EB5gMAAf8DAAH/A1kBu/QAA10BzANbAeQD
-        CwEOKAADJwE6AxMB/gNeAe0DAAH/AwAB/wNeAdL0AAMtAUUDEwH+A1UBrAQCJAADCwEOA0EBcgNYAboD
-        EwH+A14B3QNaAen4AANIAYQDAAH/A1IBqAMJAQsgAAMIAQoDUwGnAwAB/wNIAYQDSgGJA08B9PgABAED
+        CwEOKAADJwE6AxQB/gNeAe0DAAH/AwAB/wNeAdL0AAMtAUUDFAH+A1UBrAQCJAADCwEOA0EBcgNYAboD
+        FAH+A14B3QNaAen4AANIAYQDAAH/A1IBqAMJAQsgAAMIAQoDUwGnAwAB/wNIAYQDSgGJA1EB9PgABAED
         SgGJAwAB/wNdAdwDNgFYAwUBBhAAAwQBBQM2AVgDYAHbAwAB/wNKAYkEAQMJAQsDGwEl/wABAAMyAU8D
-        YAHgAwAB/wNaAe4DVQG0A04BlQNOAZUDVQG0A1oB7gMAAf8DYgHhAzMBUP8AFQADBQEGAzYBWQNUAasD
+        YAHgAwAB/wNbAe4DVQG0A04BlQNOAZUDVQG0A1sB7gMAAf8DYgHhAzMBUP8AFQADBQEGAzYBWQNUAasD
         YgHhAyEB+wMhAfsDYgHhA1UBrAM4AVsDBgEH/wAFAAFCAU0BPgcAAT4DAAEoAwABUAMAARQDAAEBAQAB
         AQUAAfAXAAP/AQAB+AEBAfAJAAHwAQAB8AoAAfABMAkAAQMB/AEwCQABAwH+ARAJAAEDAf8BEAkAAQcB
         /wGQCQABDwH/AfAJAAEfAf8B8AkAAv8B8AkAAv8B8AkAAv8BgAkAAv8KAAGfAf4KAAGPAfwKAAGHAfwK
         AAHDAfwKAAHAAfAKAAHwAQAB8AkAAfgBAQHwCQAL
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>128, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>35</value>
   </metadata>
